// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot matches medium 1`] = `
<div
  className="MuiBox-root css-i63f07"
/>
`;

exports[`Snapshot matches narrow 1`] = `
<div
  className="MuiBox-root css-11s6vt6"
/>
`;
